# patientscopeai

./: .env.example  .gitignore  .vercelignore  README.md  docker-compose.yml  package.json  pyproject.toml  requirements-api.txt  vercel.json
backend/: main.py  schemas.py
backend/routes/: audit.py  discharge_events.py  narrative.py  news.py  patient.py  readiness.py  risk.py  status.py  stays.py  trajectories.py  vitals.py  ward.py  watchlist.py
backend/services/: claude.py  cohort_split.py  current_vitals.py  demo_high_news.py  discharge_events_store.py  discharge_timing.py  icu_scan_limit.py  mimic.py  models.py  mongo.py  mongo_connection.py  narrative_layer.py  news.py  patient_display.py  scoring.py  trajectories.py  ward_alerts.py  ward_context.py  watchlist_store.py
docs/: cohort_definition.md  cohort_definitions.md  mimicscope_problem_statement.md  news2_mapping.md  phase_0_checklist.md  scoring_rubric.md
frontend/: .env.example  index.html  package.json  tsconfig.app.json  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AppPrefetch.tsx  DischargeTimingPanel.tsx  NarrativeBlock.tsx  (+11 more)
models/: train.py  validate_rf.py
notebooks/: mimic_sql_smoke.ipynb
python/: requirements.txt
scripts/: diagnose_vultr_backend.sh  download_mimic_demo.py  hello_claude.py  setup_mimic_demo.sh  verify_phase0.py  vultr_bootstrap.sh
sql/: cohort_icu_baseline.sql  mimicscope_build_v1.sql  mimicscope_build_v1_bigquery.sql  outcomes_readmission_mimic_demo.sql
(+17 files in other folders)
