# Python deps + Vercel FastAPI entrypoint (see https://vercel.com/docs/frameworks/backend/fastapi )
[project]
name = "patientscope"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "python-dotenv>=1.0.0",
  "certifi>=2024.0.0",
  "psycopg[binary]>=3.1.0",
  "SQLAlchemy>=2.0.0",
  "scikit-learn>=1.5.0",
  "numpy>=2.1.0",
  "scipy>=1.14.0",
  "joblib>=1.4.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "anthropic>=0.40.0",
  "pymongo>=4.8.0",
]

[tool.vercel]
entrypoint = "backend.main:app"
